update: resource /livros com ajustes em testes automatizados e aumento de cobertura de testes