@@ -1,6 +1,7 @@
 package com.br.spassu.api.application.usecase.livro;
 
 import com.br.spassu.api.application.dto.LivroDTO;
+import com.br.spassu.api.application.mapper.LivroMapper;
 import com.br.spassu.api.domain.entity.Assunto;
 import com.br.spassu.api.domain.entity.Autor;
 import com.br.spassu.api.domain.entity.Livro;
@@ -8,22 +9,23 @@ import com.br.spassu.api.domain.exceptions.BusinessException;
 import com.br.spassu.api.domain.repository.AssuntoRepository;
 import com.br.spassu.api.domain.repository.AutorRepository;
 import com.br.spassu.api.domain.repository.LivroRepository;
-import com.br.spassu.api.application.mapper.LivroMapper;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
+
+@ExtendWith(MockitoExtension.class)
 class CriarLivroUseCaseTest {
 
     @Mock
@@ -39,192 +41,148 @@ class CriarLivroUseCaseTest {
     private LivroMapper livroMapper;
 
     @InjectMocks
-    private CriarLivroUseCase useCase;
+    private CriarLivroUseCase criarLivroUseCase;
+
+    private LivroDTO livroDTO;
+    private Autor autor;
+    private Assunto assunto;
+    private Livro livro;
 
     @BeforeEach
-    void setup() {
-        MockitoAnnotations.openMocks(this);
+    void setUp() {
+        autor = Autor.builder()
+                .codigo(1)
+                .nome("Autor Teste")
+                .build();
+
+        assunto = Assunto.builder()
+                .codigo(1)
+                .descricao("Assunto Teste")
+                .build();
+
+        livroDTO = LivroDTO.builder()
+                .titulo("Livro Teste")
+                .editora("Editora Teste")
+                .edicao(1)
+                .anoPublicacao("2024")
+                .autorCodAus(List.of(1))
+                .assuntoCodAss(List.of(1))
+                .build();
+
+        livro = Livro.builder()
+                .titulo("Livro Teste")
+                .editora("Editora Teste")
+                .edicao(1)
+                .anoPublicacao("2024")
+                .build();
     }
 
-    @Nested
-    @DisplayName("Testes de sucesso")
-    class SucessoTests {
+    @Test
+    @DisplayName("Deve criar um livro com sucesso")
+    void deveCriarLivroComSucesso() {
 
-        @Test
-        @DisplayName("Deve criar um novo livro com sucesso")
-        void deveCriarLivroComSucesso() {
-            // Arrange
-            LivroDTO livroDTO = LivroDTO.builder()
-                    .titulo("Livro de Teste")
-                    .editora("Editora de Teste")
-                    .edicao(1)
-                    .anoPublicacao("2023")
-                    .autorCodAus(Arrays.asList(1, 2))
-                    .assuntoCodAss(Arrays.asList(3, 4))
-                    .build();
+        when(autorRepository.findByCodigo(1)).thenReturn(Optional.of(autor));
+        when(assuntoRepository.findByCodigo(1)).thenReturn(Optional.of(assunto));
+        when(livroRepository.save(any(Livro.class))).thenReturn(livro);
+        when(livroMapper.toDto(any(Livro.class))).thenReturn(livroDTO);
 
-            Autor autor1 = Autor.builder().codigo(1).nome("Autor 1").build();
-            Autor autor2 = Autor.builder().codigo(2).nome("Autor 2").build();
-            Assunto assunto1 = Assunto.builder().codigo(3).descricao("Assunto 1").build();
-            Assunto assunto2 = Assunto.builder().codigo(4).descricao("Assunto 2").build();
+        LivroDTO resultado = criarLivroUseCase.execute(livroDTO);
 
-            Livro livro = Livro.builder()
-                    .titulo("Livro de Teste")
-                    .editora("Editora de Teste")
-                    .edicao(1)
-                    .anoPublicacao("2023")
-                    .autores(Arrays.asList(autor1, autor2))
-                    .assuntos(Arrays.asList(assunto1, assunto2))
-                    .build();
-
-            Mockito.when(autorRepository.findByCodigo(1)).thenReturn(Optional.of(autor1));
-            Mockito.when(autorRepository.findByCodigo(2)).thenReturn(Optional.of(autor2));
-            Mockito.when(assuntoRepository.findByCodigo(3)).thenReturn(Optional.of(assunto1));
-            Mockito.when(assuntoRepository.findByCodigo(4)).thenReturn(Optional.of(assunto2));
-            Mockito.when(livroRepository.save(Mockito.any(Livro.class))).thenReturn(livro);
-            Mockito.when(livroMapper.toDto(Mockito.any(Livro.class))).thenReturn(livroDTO);
-
-            // Act
-            LivroDTO resultado = useCase.execute(livroDTO);
-
-            // Assert
-            Assertions.assertNotNull(resultado);
-            Assertions.assertEquals(livroDTO.getTitulo(), resultado.getTitulo());
-            Assertions.assertEquals(livroDTO.getEditora(), resultado.getEditora());
-            Assertions.assertEquals(livroDTO.getEdicao(), resultado.getEdicao());
-            Assertions.assertEquals(livroDTO.getAnoPublicacao(), resultado.getAnoPublicacao());
-            Assertions.assertEquals(livroDTO.getAutorCodAus(), resultado.getAutorCodAus());
-            Assertions.assertEquals(livroDTO.getAssuntoCodAss(), resultado.getAssuntoCodAss());
-        }
+        assertThat(resultado).isNotNull();
+        assertThat(resultado.getTitulo()).isEqualTo(livroDTO.getTitulo());
+        verify(livroRepository, times(1)).save(any(Livro.class));
     }
 
-    @Nested
-    @DisplayName("Testes de validação")
-    class ValidacaoTests {
+    @Test
+    @DisplayName("Deve lançar exceção quando dto for nulo")
+    void deveLancarExcecaoQuandoDtoNulo() {
 
-        @Test
-        @DisplayName("Deve lançar exceção quando DTO for nulo")
-        void deveLancarExcecaoQuandoDtoNulo() {
-            Assertions.assertThrows(BusinessException.class, () -> useCase.execute(null));
-        }
+        assertThatThrownBy(() -> criarLivroUseCase.execute(null))
+                .isInstanceOf(BusinessException.class)
+                .hasMessage("Dados do livro não informados");
+    }
 
-        @Test
-        @DisplayName("Deve lançar exceção quando título for nulo ou vazio")
-        void deveLancarExcecaoQuandoTituloNuloOuVazio() {
-            LivroDTO livroDTO = LivroDTO.builder()
-                    .autorCodAus(Arrays.asList(1, 2))
-                    .assuntoCodAss(Arrays.asList(3, 4))
-                    .build();
+    @Test
+    @DisplayName("Deve lançar exceção quando lista de autores for vazia")
+    void deveLancarExcecaoQuandoListaAutoresVazia() {
 
-            Assertions.assertThrows(BusinessException.class, () -> useCase.execute(livroDTO));
-        }
+        livroDTO.setAutorCodAus(List.of());
 
-        @Test
-        @DisplayName("Deve lançar exceção quando lista de autores for nula ou vazia")
-        void deveLancarExcecaoQuandoListaDeAutoresNulaOuVazia() {
-            LivroDTO livroDTO = LivroDTO.builder()
-                    .titulo("Livro de Teste")
-                    .assuntoCodAss(Arrays.asList(3, 4))
-                    .build();
+        assertThatThrownBy(() -> criarLivroUseCase.execute(livroDTO))
+                .isInstanceOf(BusinessException.class)
+                .hasMessage("É necessário informar pelo menos um autor");
+    }
 
-            Assertions.assertThrows(BusinessException.class, () -> useCase.execute(livroDTO));
-        }
+    @Test
+    @DisplayName("Deve lançar exceção quando lista de assuntos for vazia")
+    void deveLancarExcecaoQuandoListaAssuntosVazia() {
 
-        @Test
-        @DisplayName("Deve lançar exceção quando lista de assuntos for nula ou vazia")
-        void deveLancarExcecaoQuandoListaDeAssuntosNulaOuVazia() {
-            LivroDTO livroDTO = LivroDTO.builder()
-                    .titulo("Livro de Teste")
-                    .autorCodAus(Arrays.asList(1, 2))
-                    .build();
+        livroDTO.setAssuntoCodAss(List.of());
 
-            Assertions.assertThrows(BusinessException.class, () -> useCase.execute(livroDTO));
-        }
+        assertThatThrownBy(() -> criarLivroUseCase.execute(livroDTO))
+                .isInstanceOf(BusinessException.class)
+                .hasMessage("Autor com código 1 não encontrado");
+    }
 
-        @Test
-        @DisplayName("Deve lançar exceção quando autor não for encontrado")
-        void deveLancarExcecaoQuandoAutorNaoEncontrado() {
-            LivroDTO livroDTO = LivroDTO.builder()
-                    .titulo("Livro de Teste")
-                    .autorCodAus(Arrays.asList(1, 2))
-                    .assuntoCodAss(Arrays.asList(3, 4))
-                    .build();
+    @Test
+    @DisplayName("Deve lançar exceção quando autor não for encontrado")
+    void deveLancarExcecaoQuandoAutorNaoEncontrado() {
 
-            Mockito.when(autorRepository.findByCodigo(1)).thenReturn(Optional.of(Autor.builder().codigo(1).nome("Autor 1").build()));
-            Mockito.when(autorRepository.findByCodigo(2)).thenReturn(Optional.empty());
+        when(autorRepository.findByCodigo(1)).thenReturn(Optional.empty());
 
-            Assertions.assertThrows(BusinessException.class, () -> useCase.execute(livroDTO));
-        }
 
-        @Test
-        @DisplayName("Deve lançar exceção quando assunto não for encontrado")
-        void deveLancarExcecaoQuandoAssuntoNaoEncontrado() {
-            LivroDTO livroDTO = LivroDTO.builder()
-                    .titulo("Livro de Teste")
-                    .autorCodAus(Arrays.asList(1, 2))
-                    .assuntoCodAss(Arrays.asList(3, 4))
-                    .build();
+        assertThatThrownBy(() -> criarLivroUseCase.execute(livroDTO))
+                .isInstanceOf(BusinessException.class)
+                .hasMessage("Autor com código 1 não encontrado");
+    }
 
-            Mockito.when(autorRepository.findByCodigo(Mockito.anyInt())).thenReturn(Optional.of(Autor.builder().codigo(1).nome("Autor 1").build()));
-            Mockito.when(assuntoRepository.findByCodigo(3)).thenReturn(Optional.of(Assunto.builder().codigo(3).descricao("Assunto 1").build()));
-            Mockito.when(assuntoRepository.findByCodigo(4)).thenReturn(Optional.empty());
+    @Test
+    @DisplayName("Deve lançar exceção quando assunto não for encontrado")
+    void deveLancarExcecaoQuandoAssuntoNaoEncontrado() {
 
-            Assertions.assertThrows(BusinessException.class, () -> useCase.execute(livroDTO));
-        }
+        when(autorRepository.findByCodigo(1)).thenReturn(Optional.of(autor));
+        when(assuntoRepository.findByCodigo(1)).thenReturn(Optional.empty());
 
-        @Test
-        @DisplayName("Deve lançar exceção quando a lista de autores estiver vazia")
-        void testeValidarAutores_QuandoListaDeAutoresEstaVazia() {
-            List<Autor> autores = Collections.emptyList();
+        assertThatThrownBy(() -> criarLivroUseCase.execute(livroDTO))
+                .isInstanceOf(BusinessException.class)
+                .hasMessage("Assunto com código 1 não encontrado");
+    }
 
-            Assertions.assertThrows(BusinessException.class, () -> useCase.validarAutores(autores));
-        }
+    @Test
+    @DisplayName("Deve lançar exceção quando validação do domínio falhar")
+    void deveLancarExcecaoQuandoValidacaoDominioFalhar() {
 
-        @Test
-        @DisplayName("Deve lançar exceção quando a lista de assuntos estiver vazia")
-        void testeValidarAssuntos_QuandoListaDeAssuntosEstaVazia() {
-            List<Assunto> assuntos = Collections.emptyList();
+        when(autorRepository.findByCodigo(1)).thenReturn(Optional.of(autor));
+        when(assuntoRepository.findByCodigo(1)).thenReturn(Optional.of(assunto));
+        livroDTO.setTitulo("");
 
-            Assertions.assertThrows(BusinessException.class, () -> useCase.validarAssuntos(assuntos));
-        }
+        assertThatThrownBy(() -> criarLivroUseCase.execute(livroDTO))
+                .isInstanceOf(BusinessException.class)
+                .hasMessage("Título é obrigatório");
+    }
 
-        @Test
-        @DisplayName("Deve lançar exceção quando o DTO for nulo")
-        void testeValidarDadosEntrada_QuandoDtoForNulo() {
-            Assertions.assertThrows(BusinessException.class, () -> useCase.validarDadosEntrada(null));
-        }
+    @Test
+    @DisplayName("Deve criar livro com múltiplos autores e assuntos")
+    void deveCriarLivroComMultiplosAutoresEAssuntos() {
 
-        @Test
-        @DisplayName("Deve lançar exceção quando o título for nulo ou vazio")
-        void testeValidarDadosEntrada_QuandoTituloForNuloOuVazio() {
-            LivroDTO livroDTO = LivroDTO.builder()
-                    .autorCodAus(Arrays.asList(1, 2))
-                    .assuntoCodAss(Arrays.asList(3, 4))
-                    .build();
+        Autor autor2 = Autor.builder().codigo(2).nome("Autor 2").build();
+        Assunto assunto2 = Assunto.builder().codigo(2).descricao("Assunto 2").build();
 
-            Assertions.assertThrows(BusinessException.class, () -> useCase.validarDadosEntrada(livroDTO));
-        }
+        livroDTO.setAutorCodAus(List.of(1, 2));
+        livroDTO.setAssuntoCodAss(List.of(1, 2));
 
-        @Test
-        @DisplayName("Deve lançar exceção quando a lista de autores for nula ou vazia")
-        void testeValidarDadosEntrada_QuandoListaDeAutoresForNulaOuVazia() {
-            LivroDTO livroDTO = LivroDTO.builder()
-                    .titulo("Livro de Teste")
-                    .assuntoCodAss(Arrays.asList(3, 4))
-                    .build();
+        when(autorRepository.findByCodigo(1)).thenReturn(Optional.of(autor));
+        when(autorRepository.findByCodigo(2)).thenReturn(Optional.of(autor2));
+        when(assuntoRepository.findByCodigo(1)).thenReturn(Optional.of(assunto));
+        when(assuntoRepository.findByCodigo(2)).thenReturn(Optional.of(assunto2));
+        when(livroRepository.save(any(Livro.class))).thenReturn(livro);
+        when(livroMapper.toDto(any(Livro.class))).thenReturn(livroDTO);
 
-            Assertions.assertThrows(BusinessException.class, () -> useCase.validarDadosEntrada(livroDTO));
-        }
+        LivroDTO resultado = criarLivroUseCase.execute(livroDTO);
 
-        @Test
-        @DisplayName("Deve lançar exceção quando a lista de assuntos for nula ou vazia")
-        void testeValidarDadosEntrada_QuandoListaDeAssuntosForNulaOuVazia() {
-            LivroDTO livroDTO = LivroDTO.builder()
-                    .titulo("Livro de Teste")
-                    .autorCodAus(Arrays.asList(1, 2))
-                    .build();
-
-            Assertions.assertThrows(BusinessException.class, () -> useCase.validarDadosEntrada(livroDTO));
-        }
+        assertThat(resultado).isNotNull();
+        assertThat(resultado.getAutorCodAus()).hasSize(2);
+        assertThat(resultado.getAssuntoCodAss()).hasSize(2);
+        verify(livroRepository, times(1)).save(any(Livro.class));
     }
 }
